<resources>
    <string name="app_name">AndroidNotification</string>
    <string name="topic">Notification</string>
    <string name="ID1_MainJava">channel_name</string>
    <string name="ID2_MainJava">channel_description</string>
    <string name="channel_name">id1_MainJava</string>
    <string name="channel_description">id2_MainJava</string>
    <string name="re_try_password">Re-Try Password</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="Main001">Name</string>
    <string name="Main002">SignUp</string>
    <string name="R1">Name</string>
    <string name="R2">Email</string>
    <string name="R3">Telephone</string>
    <string name="R4">Password</string>
    <string name="R5">Re-type password</string>
    <string name="btn1">Register</string>
    <string name="btn2">Cancel</string>
    <string name="register">Register</string>
</resources>
